src/sfdx/main/default/objects/FileData__c/FileData__c.object-meta.xml
<CustomObject>
    <description>Stores metadata for files uploaded to the server.</description>
    <label>FileData</label>
    <nameField>
        <label>FileData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FileData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>