src/sfdx/main/default/objects/FileData__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Account object. Allows for filtering by Account Id.</description>
    <inlineHelpText>Lookup relationship to the Account object. Allows for filtering by Account Id.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FileData</relationshipLabel>
    <relationshipName>FileData</relationshipName>
    <type>Lookup</type>
</CustomField>