src/sfdx/main/default/objects/FileData__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Contact object. Allows filtering by Contact Id.</description>
    <inlineHelpText>Lookup relationship to the Contact object. Allows filtering by Contact Id.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FileData</relationshipLabel>
    <relationshipName>FileData</relationshipName>
    <type>Lookup</type>
</CustomField>