src/sfdx/main/default/objects/FileData__c/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <description>The name of the file in the filesystem</description>
    <label>Filename</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>