src/sfdx/main/default/objects/FileData__c/fields/FileSize__c.field-meta.xml
<CustomField>
    <fullName>FileSize__c</fullName>
    <description>The size of the file, in bytes.</description>
    <label>FileSize</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>