src/sfdx/main/default/objects/FileData__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <description>The file&apos;s mimetype (e.g., application/pdf, image/png, text/markdown, etc.)</description>
    <label>FileType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>